# fastapi-init

./: .dockerignore  .env.prod.example  .env.sample  .gitignore  README.md  alembic.ini  celery_app.py  cli.py  db.sqlite3  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: cb00319236b7_initial_migration.py  ede2492a737f_currect_user_id_type_in_notification_.py  f3b4d7f0db73_notification_table_migration.py
api/: router.py
api-x/v1/health/: router.py
api/v1/: router.py
api/v2/: router.py
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/cli/: __main__.py  command.py
app/config/: config.py  security.py  settings.py
app/core/: config.py  exc_handlers.py  exceptions.py  lifespan.py  responses.py  security.py  time.py
app/db/: __init__.py  depends.py  engine.py  init_db.py  mixins.py  session.py
app/dependencies/: oauth2.py  redis.py  session.py  user.py
app/domain/: __init__.py
app/models/: auth.py  user.py
app/modules/: __init__.py  router.py
app/schemas/: auth.py  user.py
app/shared/: config.py  exc_handlers.py  exceptions.py  lifespan.py  logging.py  middleware.py  types.py
app/utils/: __init__.py  get_current_utc.py
cli/: __main__.py
cli/create/: admin_user.py
cli/seed/: rbac.py
commands/: __init__.py
commands/create/: __init__.py  admin_user.py  superuser.py
commands/seed/: __init__.py  assign_permissions.py  assign_roles_to_admin.py  constants.py  permissions.py  rbac.py  roles.py
commands/seeds/: rbac.py
context/: lifespan.py
core/: enums.py  exceptions.py  handlers.py  lifespan.py  logging.py  middleware.py  response.py  settings.py
core/config/: __init__.py  logging.py  settings.py
core/db/: __init__.py  base.py  depends.py  deps.py  engines.py  init_db.py  mixins.py  schemas.py  sessions.py
core/email/: base.py  template.py
core/exceptions/: __init__.py  already_exists.py  app_exception.py  bad_request.py  conflict.py  forbidden.py  http_exception.py  invariant_violation.py  not_found.py  service_unavailable.py  timeout.py  unauthorized.py
core/repositories/: delete.py  exceptions.py  pagination.py  read.py  repository.py  update.py  write.py
core/repositoriesx/: __init__.py  base.py  exceptions.py  unit_of_work.py
core/repository/: base.py  create.py  delete.py  exceptions.py  locking.py  read.py  repository.py  sql.py  unit_of_work.py  update.py
core/response/: schemas.py  swagger.py
core/security/: auth.py  authx.py
core/status/: __init__.py
core/swagger/: __init__.py  constants.py  openapi_docs.py  responses.py  types.py
core/utils/: make_db_sync_url.py  time.py
db/: engine.py  mixins.py  session.py
db/connections/: __init__.py  engines.py  sessions.py
db/models/: bases.py
dependencies/: permissions.py  redis.py  roles.py  session.py  user.py
dependencies/auth/: oauth2.py  user.py
dependencies/authorization/: permissions.py  roles.py
dependencies/connections/: sessions.py
docker/: Dockerfile  entrypoint.sh
domain/: __init__.py
domain/auth/: depends.py  deps.py  schemas.py  service.py
domain/authentication/: depends.py  schemas.py  services.py
domain/authorization/: depends.py  services.py
domain/base/: service.py
domain/email/: schemas.py  service.py  template.py
domain/health/: constants.py  depends.py  schemas.py  service.py  services.py
domain/jwt/: deps.py  schemas.py
domain/notification/: constants.py  models.py  policies.py  repositories.py  schemas.py  services.py
domain/password/: deps.py  service.py
domain/permission/: constants.py  depends.py  models.py  policies.py  repositories.py  schemas.py  services.py
domain/rbac/: deps.py  models.py  repository.py  schemas.py  service.py
domain/response/: schemas.py
domain/role/: constants.py  depends.py  models.py  policies.py  repositories.py  schemas.py  services.py
domain/tasks/: email.py  service.py
domain/token/: service.py
domain/user/: cache.py  constants.py  depends.py  deps.py  models.py  policies.py  repositories.py  repository.py  schemas.py  service.py  services.py  user_status.py
infrastructure/cache/: handler.py
infrastructure/limiter/: __init__.py  handler.py
infrastructure/rate_limit/: limiter.py
limiter/: __init__.py
limiter/handlers/: rate_limit_handler.py
limiter/limites/: user_limit.py
migrations/: env.py
migrations/versions/: 09e0013e2bbb_update_rbac_with_enums.py  10ef0738fd21_create_rbac_tables.py  3070f52e975b_create_user_table.py  31d8e81fc4b2_currect_password_field_name.py  598953700c43_create_role_table.py  5f360f3bd031_create_rbac_models.py  7004afaefad6_create_permission_table.py  80bcb089819c_update_rbac_models.py  bcb0802ce34c_db_update_password_field.py  c53c24debef1_db_updated_user_migration_schema.py  eca773dec1bb_create_role_permission_table.py  efbbaa612776_create_rbac_models.py  f5f78049d378_db_initial_migration_schema.py
models/: permission.py  role.py  role_permission_link.py  user.py  user_role_link.py
schemas/: auth.py  base.py  health.py  message.py  permission.py  rbac.py  role.py  role_permission_link.py  user.py  user_role_link.py
scripts/: server.sh  worker.sh
services/: user_service.py
services/base/: __init__.py  exceptions.py  service.py
services/user/: __init__.py  deps.py  service.py
tasks/: __init__.py  email.py
templates/email/: base.html  verify_email.html  welcome.html
tests/: conftest.py
tests/integration/: conftest.py
utils/: get_utc_now.py
(+277 files in other folders)
